# fin-multi

./: .gitignore  Cargo.toml  NOTICE  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  fin_multi.wasm
src/: contract.rs  msg.rs
