[package]
name = "fin-multi"
version = "0.1.0"
authors = ["codehans <94654388+codehans@users.noreply.github.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "2.0"
cosmwasm-std = { version = "2.0", default-features = false }
cw-storage-plus = "2.0"
schemars = "0.8.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1"
kujira = "1.1"

[dev-dependencies]
cw-multi-test = "0.15.1"
